<resources>
    <string name="app_name">Pulp</string>
    <string name="title_activity_reader">Reader</string>
    <string name="action_settings">Settings</string>
    <string name="banner_ad_unit_id">ca-app-pub-5232768983698923/4379906293</string>
    <string name="app_pub">ca-app-pub-5232768983698923~2903173093</string>
    <string name="appwidget_text">Pulplette</string>
    <string name="configure">Configure</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="add_widget">Add widget</string>
    <string name="title_activity_collection_maker">CollectionMaker</string>
    <string name="title_activity_collection_drawer">CollectionDrawer</string>
    <string name="selected">Comic Selected</string>
    <string name="unselected">Comic Unselected</string>
    <string name="title_activity_login">Pulp Login</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_create_collection">CreateCollection</string>

    <!-- Strings related to login -->
    <string name="action_register">Register</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="log_in_string">Log In</string>
    <string name="or_descriptor">or</string>
    <string name="short_boxes">Short Boxes</string>
    <string name="you_are_on_page">You are on Page:</string>
    <string name="make_a_short_box">Make a Short Box</string>
    <string name="long_box">Long Box</string>
    <string name="add">Add</string>
    <string name="permission_toast">Permission denied to read your External storage</string>
    <string name="dialog_message">You know so you can find it and stuff..</string>
    <string name="dialog_title">Give your box a name</string>
    <string name="pos_button">Create</string>
    <string name="neg_button">Cancel</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
